# rust-stt-mcp

./: Cargo.toml  Containerfile  README.md
src/: audio.rs  main.rs  transcribe.rs
